// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pdfAdequation — snapshot CIF coché + 5 recos (cadre MIF II + DDA allumé) > génère la déclaration avec cadre 'MIF II + DDA' + RG AMF allumés 1`] = `
"<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"/>
<title>Déclaration d'adéquation — Pierre Dupont & Sophie Dupont</title>
<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"/>
<style>
  @page{size:A4;margin:14mm 12mm 12mm 12mm;}
  *{box-sizing:border-box;}
  body{font-family:'Lato',-apple-system,BlinkMacSystemFont,sans-serif;font-size:9.5pt;line-height:1.55;color:#0F172A;margin:0;}
  .page{position:relative;min-height:255mm;padding:6mm 0 14mm 0;page-break-after:always;}
  .page:last-of-type{page-break-after:auto;}
  .cover{display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:255mm;text-align:center;background:linear-gradient(135deg,#FDF6E8 0%,#fff 60%);padding:30mm 12mm;}
  .cover-logo{max-height:42mm;max-width:90mm;object-fit:contain;margin-bottom:14mm;}
  .cover-title{font-size:24pt;font-weight:900;letter-spacing:-0.5px;color:#0F172A;margin-bottom:4mm;}
  .cover-subtitle{font-size:12pt;color:#26428B;font-weight:600;margin-bottom:8mm;}
  .cover-bar{width:60mm;height:2px;background:#C4973D;margin:8mm auto;}
  .cover-tagline{font-size:8.5pt;color:#666;line-height:1.7;margin-top:6mm;max-width:130mm;}
  .cover-footer{position:absolute;bottom:14mm;left:0;right:0;text-align:center;font-size:7.5pt;color:#888;}
  .page-header{display:flex;justify-content:space-between;align-items:center;border-bottom:2px solid #C4973D;padding:0 12mm 4mm 12mm;margin-bottom:6mm;}
  .page-header-title{font-size:13pt;font-weight:700;color:#0F172A;}
  .page-header-client{font-size:8pt;color:#888;}
  .page-footer{position:absolute;bottom:6mm;left:12mm;right:12mm;display:flex;justify-content:space-between;font-size:7pt;color:#999;border-top:1px solid #eee;padding-top:3mm;}
  .section{margin:0 12mm 8mm 12mm;}
  .section-title{font-size:10pt;font-weight:700;color:#0F172A;border-bottom:1px solid #C4973D;padding-bottom:3px;margin-bottom:6px;}
  .block{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:6px;padding:8px 11px;margin-bottom:8px;font-size:8.5pt;line-height:1.55;color:#333;}
  .block-title{font-size:9.5pt;font-weight:700;color:#0F172A;margin-bottom:4px;}
  .kpi-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:8px;margin-bottom:8px;}
  .kpi{background:#fff;border:1px solid rgba(227,175,100,0.25);border-radius:6px;padding:7px 9px;text-align:center;}
  .kpi-label{font-size:7pt;color:#888;text-transform:uppercase;letter-spacing:0.5px;margin-bottom:3px;}
  .kpi-value{font-size:11pt;font-weight:700;color:#0F172A;}
  .kpi-sub{font-size:7pt;color:#666;margin-top:2px;}
  table.matrice{width:100%;border-collapse:collapse;font-size:8pt;}
  table.matrice th{background:#0F172A;color:#fff;text-align:left;padding:6px 8px;font-weight:700;border:1px solid #0F172A;}
  table.matrice td{padding:6px 8px;border:1px solid #ddd;vertical-align:top;background:#fff;page-break-inside:avoid;break-inside:avoid;}
  table.matrice tr:nth-child(even) td{background:rgba(227,175,100,0.05);}
  .dim-header td{background:#C4973D20!important;font-weight:700;color:#0F172A;font-size:8.5pt;}
  .non-valide{background:#FEE2E2;border:2px solid #DC2626;border-radius:6px;padding:10px 12px;margin:0 12mm 10mm 12mm;font-size:9.5pt;color:#991B1B;line-height:1.5;}
  .non-valide-title{font-size:11pt;font-weight:900;margin-bottom:4px;}
  .deg-grise{opacity:0.45;pointer-events:none;}
  .mention-reg{font-size:8pt;color:#666;font-style:italic;line-height:1.5;}
  .portee{margin:6mm 12mm 0 12mm;font-size:7pt;color:#92400E;line-height:1.5;background:rgba(146,64,14,0.05);border-left:3px solid rgba(146,64,14,0.35);padding:6px 10px;border-radius:4px;}
  a{color:#26428B;text-decoration:none;}
  @media print{
    .block,table.matrice tr,.kpi{page-break-inside:avoid;break-inside:avoid;}
  }</style></head><body><div class="page cover">
    
    <div class="cover-title">Déclaration d'adéquation</div>
    <div class="cover-subtitle">MIF II + DDA</div>
    <div class="cover-bar"></div>
    <div style="font-size:9pt;color:#0F172A;font-weight:600;margin-top:6mm;">Remise à : Pierre Dupont & Sophie Dupont</div>
    <div style="font-size:9pt;color:#666;margin-top:2mm;">le 26 mai 2026 à 14:30</div>
    <div class="cover-tagline">
      Document remis <strong>préalablement à toute opération</strong>, conformément aux obligations MIF II + DDA. Justifie en quoi le conseil délivré correspond aux objectifs, à l'horizon, à la tolérance au risque, à la capacité à subir des pertes et aux préférences de durabilité (ESG) du client.
    </div>
    <div style="margin-top:8mm;font-size:8.5pt;color:#26428B;font-weight:600;">Document remis MÊME SANS TRANSACTION effective.</div>
    <div class="cover-footer">EcoPatrimoine Conseil · ORIAS n° 25006907 · Document confidentiel · 26 mai 2026 14:30</div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Déclaration d'adéquation — En-tête et profil</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 26 mai 2026 14:30</div></div>
    
    <div class="section">
    <div class="section-title">En-tête réglementaire</div>
    <div class="block">
      <p><strong>Date et heure de remise :</strong> le 26 mai 2026 à 14:30.</p>
      <p style="margin-top:4px;"><strong>Remise même sans transaction :</strong> le présent document est remis au client préalablement à toute opération, y compris si aucune transaction n'est conclue à l'issue de la mission.</p>
      <p style="margin-top:4px;"><strong>Suivi périodique :</strong> ce conseil fait l'objet d'un suivi périodique (revue annuelle — à confirmer) au cours duquel l'adéquation est réévaluée à la lumière des évolutions de votre situation.</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Synthèse du profil KYC (issue du questionnaire de mission)</div>
    <div class="kpi-grid">
      <div class="kpi">
        <div class="kpi-label">Tolérance au risque</div>
        <div class="kpi-value">Dynamique</div>
        <div class="kpi-sub">Score : 54 / 96 pts (hors ESG)</div>
      </div>
      <div class="kpi">
        <div class="kpi-label">Horizon</div>
        <div class="kpi-value">Long terme (9 à 15 ans)</div>
        <div class="kpi-sub">+8 pts</div>
      </div>
      <div class="kpi">
        <div class="kpi-label">Capacité à subir des pertes</div>
        <div class="kpi-value">faible</div>
        <div class="kpi-sub">1 mois de coussin liquide</div>
      </div>
      <div class="kpi">
        <div class="kpi-label">Préférence ESG</div>
        <div class="kpi-value">PARTIEL</div>
        <div class="kpi-sub">Sous-score : 2 / 4 pts</div>
      </div>
    </div>
    <div class="block" style="font-size:8pt;">
      <div class="block-title">Détail capacité à subir des pertes</div>
      <ul style="margin:0;padding-left:14px;">
        <li>Coussin liquide ≈ 1 mois de revenus</li>
      </ul>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Rappel des besoins exprimés (KYC)</div>
    <div class="block">
      <ul style="margin:0;padding-left:14px;"><li>Santé — Dépenses non remboursées</li><li>Santé — Hospitalisation</li><li>Prévoyance — Arrêt de travail / invalidité</li><li>Prévoyance — Décès</li><li>Retraite — Capital retraite</li><li>Retraite — Optimiser l'épargne retraite existante</li><li>Épargne — Valoriser un capital</li><li>Épargne — Préparer la transmission</li></ul>
    </div>
  </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Déclaration d'adéquation</span><span>26 mai 2026 14:30</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Déclaration d'adéquation — Matrice et conseil</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 26 mai 2026 14:30</div></div>
    <div class="section">
    <div class="section-title">Matrice profil/besoin → recommandation justifiée</div>
    <p class="mention-reg" style="margin-bottom:6px;">Chaque recommandation est rattachée à une dimension du profil et reliée, le cas échéant, à un besoin KYC explicite. La justification rappelle la cohérence entre le conseil délivré et les informations recueillies sur le client.</p>
    <table class="matrice">
      <thead>
        <tr>
          <th style="width:25%">Recommandation</th>
          <th style="width:18%">Dimension du profil</th>
          <th style="width:22%">Lien KYC (besoin)</th>
          <th style="width:35%">Justification</th>
        </tr>
      </thead>
      <tbody>
        <tr class="dim-header"><td colspan="4">Besoin exprimé</td></tr><tr>
          <td><strong>Souscrire une garantie ITT renforcée</strong></td>
          <td style="white-space:nowrap;">Besoin exprimé</td>
          <td>Prévoyance — Arrêt de travail / invalidité</td>
          <td>Le client a déclaré l'arrêt de travail comme besoin prioritaire et son profil dynamique (54/96 pts) tolère un coût additionnel pour cette garantie.</td>
        </tr><tr>
          <td><strong>Compléter la couverture décès toutes causes</strong></td>
          <td style="white-space:nowrap;">Besoin exprimé</td>
          <td>Prévoyance — Décès</td>
          <td>Capital actuel insuffisant pour maintenir le train de vie du conjoint et des enfants pendant 5 ans en cas de disparition.</td>
        </tr><tr class="dim-header"><td colspan="4">Tolérance au risque</td></tr><tr>
          <td><strong>Augmenter la part actions de l'allocation cible</strong></td>
          <td style="white-space:nowrap;">Tolérance au risque</td>
          <td>—</td>
          <td>Profil dynamique + horizon long terme (9-15 ans) : la part actions actuelle (35 %) est en-deçà de la cible théorique (60-80 %).</td>
        </tr><tr class="dim-header"><td colspan="4">Préférences en matière de durabilité (ESG)</td></tr><tr>
          <td><strong>Privilégier des supports labellisés ISR / article 8 SFDR</strong></td>
          <td style="white-space:nowrap;">Préférences en matière de durabilité (ESG)</td>
          <td>—</td>
          <td>Cohérent avec la préférence ESG partielle exprimée au questionnaire (sous-score 2/4).</td>
        </tr><tr class="dim-header"><td colspan="4">Capacité à subir des pertes</td></tr><tr>
          <td><strong>Constituer une réserve liquide complémentaire</strong></td>
          <td style="white-space:nowrap;">Capacité à subir des pertes</td>
          <td>—</td>
          <td>Coussin liquide actuel inférieur à 12 mois de revenus — viser un horizon de 18 mois avant d'engager des arbitrages plus dynamiques.</td>
        </tr>
      </tbody>
    </table>
  </div>
    <div class="section">
    <div class="section-title">Coûts, frais et impact durabilité</div>
    <div class="block">
      <div class="block-title">Mode de rémunération du cabinet</div>
      <p>Commission versée par l'assureur (incluse dans la prime).</p>
      <p style="margin-top:4px;">Barème d'honoraires : <em style="color:#92400E">à confirmer</em>.</p>
    </div>
    <div class="block">
      <div class="block-title">Impact des frais sur la performance</div>
      <p>Les frais (frais d'entrée, frais de gestion, frais d'arbitrage, le cas échéant) sont communiqués au client avant toute souscription, dans les documents précontractuels du contrat retenu (DIC / IPID). Leur impact sur la performance nette à long terme est explicité au moment de la souscription.</p>
    </div>
    <div class="block">
      <div class="block-title">Préférence en matière de durabilité (ESG)</div>
      <p>Intégration partielle des critères ESG. Les recommandations émises tiennent compte de cette préférence et privilégient, le cas échéant, des supports labellisés ISR ou article 8/9 SFDR.</p>
    </div>
  </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Déclaration d'adéquation</span><span>26 mai 2026 14:30</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Déclaration d'adéquation — Suivi et cadre</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 26 mai 2026 14:30</div></div>
    <div class="section">
    <div class="section-title">Modalités de suivi périodique</div>
    <div class="block">
      <p>Conformément à l'article L.522-5 III du Code des assurances et au RG AMF (volet CIF), le cabinet s'engage à :</p>
      <ul style="margin-top:4px;padding-left:14px;">
        <li>réévaluer l'adéquation du conseil au minimum à fréquence <strong>annuelle</strong> (à confirmer) ;</li>
        <li>solliciter du client la mise à jour des informations KYC si une évolution significative de sa situation est portée à notre connaissance ;</li>
        <li>tenir à disposition du client un compte-rendu de chaque revue.</li>
      </ul>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Cadre réglementaire et références légales</div>
    <div class="block">
      <p>Cette déclaration d'adéquation est établie conformément aux obligations MIF II + DDA applicables à l'activité du cabinet EcoPatrimoine Conseil (intermédiaire en assurance et conseiller en investissements financiers).</p>
      <p style="margin-top:6px;">Références applicables :</p>
      <ul style="margin-top:4px;padding-left:14px;font-size:8.5pt;line-height:1.7;">
        <li><strong>Code des assurances</strong> · L.511-1 et s. — Conditions d'exercice de l'intermédiation en assurance</li><li><strong>Code des assurances</strong> · L.521-1 et s. — Devoir d'information et de conseil — DDA transposée en droit français</li><li><strong>Code des assurances</strong> · L.522-1 et s. — Règles spécifiques aux contrats d'assurance-vie et unités de compte (IBIP)</li><li><strong>Directive UE 2016/97 (DDA)</strong> · — — Distribution d'assurance</li><li><strong>CMF</strong> · L.541-1 et s. — Conseil en investissements financiers</li><li><strong>RG AMF</strong> · Livre III — Règles de bonne conduite et obligations professionnelles applicables aux CIF</li><li><strong>Directive MIF II</strong> · — — Marchés d'instruments financiers</li>
      </ul>
    </div>
  </div>
    <div class="portee">
      <strong>Portée du document — Ploutos (Ecopatrimoine).</strong> Ce document est généré pour vous aider à respecter vos obligations de conformité. Il ne constitue ni une attestation, ni une garantie d'exhaustivité réglementaire. Le conseiller reste seul responsable de la cohérence des mentions avec sa situation et le référentiel de son association professionnelle.
    </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Déclaration d'adéquation</span><span>26 mai 2026 14:30</span></div>
  </div></body></html>"
`;

exports[`pdfAdequation — snapshot COA seul + 5 recos (matrice complète) > génère la déclaration d'adéquation pour COA seul avec date figée 1`] = `
"<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"/>
<title>Déclaration d'adéquation — Pierre Dupont & Sophie Dupont</title>
<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"/>
<style>
  @page{size:A4;margin:14mm 12mm 12mm 12mm;}
  *{box-sizing:border-box;}
  body{font-family:'Lato',-apple-system,BlinkMacSystemFont,sans-serif;font-size:9.5pt;line-height:1.55;color:#0F172A;margin:0;}
  .page{position:relative;min-height:255mm;padding:6mm 0 14mm 0;page-break-after:always;}
  .page:last-of-type{page-break-after:auto;}
  .cover{display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:255mm;text-align:center;background:linear-gradient(135deg,#FDF6E8 0%,#fff 60%);padding:30mm 12mm;}
  .cover-logo{max-height:42mm;max-width:90mm;object-fit:contain;margin-bottom:14mm;}
  .cover-title{font-size:24pt;font-weight:900;letter-spacing:-0.5px;color:#0F172A;margin-bottom:4mm;}
  .cover-subtitle{font-size:12pt;color:#26428B;font-weight:600;margin-bottom:8mm;}
  .cover-bar{width:60mm;height:2px;background:#C4973D;margin:8mm auto;}
  .cover-tagline{font-size:8.5pt;color:#666;line-height:1.7;margin-top:6mm;max-width:130mm;}
  .cover-footer{position:absolute;bottom:14mm;left:0;right:0;text-align:center;font-size:7.5pt;color:#888;}
  .page-header{display:flex;justify-content:space-between;align-items:center;border-bottom:2px solid #C4973D;padding:0 12mm 4mm 12mm;margin-bottom:6mm;}
  .page-header-title{font-size:13pt;font-weight:700;color:#0F172A;}
  .page-header-client{font-size:8pt;color:#888;}
  .page-footer{position:absolute;bottom:6mm;left:12mm;right:12mm;display:flex;justify-content:space-between;font-size:7pt;color:#999;border-top:1px solid #eee;padding-top:3mm;}
  .section{margin:0 12mm 8mm 12mm;}
  .section-title{font-size:10pt;font-weight:700;color:#0F172A;border-bottom:1px solid #C4973D;padding-bottom:3px;margin-bottom:6px;}
  .block{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:6px;padding:8px 11px;margin-bottom:8px;font-size:8.5pt;line-height:1.55;color:#333;}
  .block-title{font-size:9.5pt;font-weight:700;color:#0F172A;margin-bottom:4px;}
  .kpi-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:8px;margin-bottom:8px;}
  .kpi{background:#fff;border:1px solid rgba(227,175,100,0.25);border-radius:6px;padding:7px 9px;text-align:center;}
  .kpi-label{font-size:7pt;color:#888;text-transform:uppercase;letter-spacing:0.5px;margin-bottom:3px;}
  .kpi-value{font-size:11pt;font-weight:700;color:#0F172A;}
  .kpi-sub{font-size:7pt;color:#666;margin-top:2px;}
  table.matrice{width:100%;border-collapse:collapse;font-size:8pt;}
  table.matrice th{background:#0F172A;color:#fff;text-align:left;padding:6px 8px;font-weight:700;border:1px solid #0F172A;}
  table.matrice td{padding:6px 8px;border:1px solid #ddd;vertical-align:top;background:#fff;page-break-inside:avoid;break-inside:avoid;}
  table.matrice tr:nth-child(even) td{background:rgba(227,175,100,0.05);}
  .dim-header td{background:#C4973D20!important;font-weight:700;color:#0F172A;font-size:8.5pt;}
  .non-valide{background:#FEE2E2;border:2px solid #DC2626;border-radius:6px;padding:10px 12px;margin:0 12mm 10mm 12mm;font-size:9.5pt;color:#991B1B;line-height:1.5;}
  .non-valide-title{font-size:11pt;font-weight:900;margin-bottom:4px;}
  .deg-grise{opacity:0.45;pointer-events:none;}
  .mention-reg{font-size:8pt;color:#666;font-style:italic;line-height:1.5;}
  .portee{margin:6mm 12mm 0 12mm;font-size:7pt;color:#92400E;line-height:1.5;background:rgba(146,64,14,0.05);border-left:3px solid rgba(146,64,14,0.35);padding:6px 10px;border-radius:4px;}
  a{color:#26428B;text-decoration:none;}
  @media print{
    .block,table.matrice tr,.kpi{page-break-inside:avoid;break-inside:avoid;}
  }</style></head><body><div class="page cover">
    
    <div class="cover-title">Déclaration d'adéquation</div>
    <div class="cover-subtitle">DDA</div>
    <div class="cover-bar"></div>
    <div style="font-size:9pt;color:#0F172A;font-weight:600;margin-top:6mm;">Remise à : Pierre Dupont & Sophie Dupont</div>
    <div style="font-size:9pt;color:#666;margin-top:2mm;">le 26 mai 2026 à 14:30</div>
    <div class="cover-tagline">
      Document remis <strong>préalablement à toute opération</strong>, conformément aux obligations DDA. Justifie en quoi le conseil délivré correspond aux objectifs, à l'horizon, à la tolérance au risque, à la capacité à subir des pertes et aux préférences de durabilité (ESG) du client.
    </div>
    <div style="margin-top:8mm;font-size:8.5pt;color:#26428B;font-weight:600;">Document remis MÊME SANS TRANSACTION effective.</div>
    <div class="cover-footer">EcoPatrimoine Conseil · ORIAS n° 25006907 · Document confidentiel · 26 mai 2026 14:30</div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Déclaration d'adéquation — En-tête et profil</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 26 mai 2026 14:30</div></div>
    
    <div class="section">
    <div class="section-title">En-tête réglementaire</div>
    <div class="block">
      <p><strong>Date et heure de remise :</strong> le 26 mai 2026 à 14:30.</p>
      <p style="margin-top:4px;"><strong>Remise même sans transaction :</strong> le présent document est remis au client préalablement à toute opération, y compris si aucune transaction n'est conclue à l'issue de la mission.</p>
      <p style="margin-top:4px;"><strong>Suivi périodique :</strong> ce conseil fait l'objet d'un suivi périodique (revue annuelle — à confirmer) au cours duquel l'adéquation est réévaluée à la lumière des évolutions de votre situation.</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Synthèse du profil KYC (issue du questionnaire de mission)</div>
    <div class="kpi-grid">
      <div class="kpi">
        <div class="kpi-label">Tolérance au risque</div>
        <div class="kpi-value">Dynamique</div>
        <div class="kpi-sub">Score : 54 / 96 pts (hors ESG)</div>
      </div>
      <div class="kpi">
        <div class="kpi-label">Horizon</div>
        <div class="kpi-value">Long terme (9 à 15 ans)</div>
        <div class="kpi-sub">+8 pts</div>
      </div>
      <div class="kpi">
        <div class="kpi-label">Capacité à subir des pertes</div>
        <div class="kpi-value">faible</div>
        <div class="kpi-sub">1 mois de coussin liquide</div>
      </div>
      <div class="kpi">
        <div class="kpi-label">Préférence ESG</div>
        <div class="kpi-value">PARTIEL</div>
        <div class="kpi-sub">Sous-score : 2 / 4 pts</div>
      </div>
    </div>
    <div class="block" style="font-size:8pt;">
      <div class="block-title">Détail capacité à subir des pertes</div>
      <ul style="margin:0;padding-left:14px;">
        <li>Coussin liquide ≈ 1 mois de revenus</li>
      </ul>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Rappel des besoins exprimés (KYC)</div>
    <div class="block">
      <ul style="margin:0;padding-left:14px;"><li>Santé — Dépenses non remboursées</li><li>Santé — Hospitalisation</li><li>Prévoyance — Arrêt de travail / invalidité</li><li>Prévoyance — Décès</li><li>Retraite — Capital retraite</li><li>Retraite — Optimiser l'épargne retraite existante</li><li>Épargne — Valoriser un capital</li><li>Épargne — Préparer la transmission</li></ul>
    </div>
  </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Déclaration d'adéquation</span><span>26 mai 2026 14:30</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Déclaration d'adéquation — Matrice et conseil</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 26 mai 2026 14:30</div></div>
    <div class="section">
    <div class="section-title">Matrice profil/besoin → recommandation justifiée</div>
    <p class="mention-reg" style="margin-bottom:6px;">Chaque recommandation est rattachée à une dimension du profil et reliée, le cas échéant, à un besoin KYC explicite. La justification rappelle la cohérence entre le conseil délivré et les informations recueillies sur le client.</p>
    <table class="matrice">
      <thead>
        <tr>
          <th style="width:25%">Recommandation</th>
          <th style="width:18%">Dimension du profil</th>
          <th style="width:22%">Lien KYC (besoin)</th>
          <th style="width:35%">Justification</th>
        </tr>
      </thead>
      <tbody>
        <tr class="dim-header"><td colspan="4">Besoin exprimé</td></tr><tr>
          <td><strong>Souscrire une garantie ITT renforcée</strong></td>
          <td style="white-space:nowrap;">Besoin exprimé</td>
          <td>Prévoyance — Arrêt de travail / invalidité</td>
          <td>Le client a déclaré l'arrêt de travail comme besoin prioritaire et son profil dynamique (54/96 pts) tolère un coût additionnel pour cette garantie.</td>
        </tr><tr>
          <td><strong>Compléter la couverture décès toutes causes</strong></td>
          <td style="white-space:nowrap;">Besoin exprimé</td>
          <td>Prévoyance — Décès</td>
          <td>Capital actuel insuffisant pour maintenir le train de vie du conjoint et des enfants pendant 5 ans en cas de disparition.</td>
        </tr><tr class="dim-header"><td colspan="4">Tolérance au risque</td></tr><tr>
          <td><strong>Augmenter la part actions de l'allocation cible</strong></td>
          <td style="white-space:nowrap;">Tolérance au risque</td>
          <td>—</td>
          <td>Profil dynamique + horizon long terme (9-15 ans) : la part actions actuelle (35 %) est en-deçà de la cible théorique (60-80 %).</td>
        </tr><tr class="dim-header"><td colspan="4">Préférences en matière de durabilité (ESG)</td></tr><tr>
          <td><strong>Privilégier des supports labellisés ISR / article 8 SFDR</strong></td>
          <td style="white-space:nowrap;">Préférences en matière de durabilité (ESG)</td>
          <td>—</td>
          <td>Cohérent avec la préférence ESG partielle exprimée au questionnaire (sous-score 2/4).</td>
        </tr><tr class="dim-header"><td colspan="4">Capacité à subir des pertes</td></tr><tr>
          <td><strong>Constituer une réserve liquide complémentaire</strong></td>
          <td style="white-space:nowrap;">Capacité à subir des pertes</td>
          <td>—</td>
          <td>Coussin liquide actuel inférieur à 12 mois de revenus — viser un horizon de 18 mois avant d'engager des arbitrages plus dynamiques.</td>
        </tr>
      </tbody>
    </table>
  </div>
    <div class="section">
    <div class="section-title">Coûts, frais et impact durabilité</div>
    <div class="block">
      <div class="block-title">Mode de rémunération du cabinet</div>
      <p>Commission versée par l'assureur (incluse dans la prime).</p>
      <p style="margin-top:4px;">Barème d'honoraires : <em style="color:#92400E">à confirmer</em>.</p>
    </div>
    <div class="block">
      <div class="block-title">Impact des frais sur la performance</div>
      <p>Les frais (frais d'entrée, frais de gestion, frais d'arbitrage, le cas échéant) sont communiqués au client avant toute souscription, dans les documents précontractuels du contrat retenu (DIC / IPID). Leur impact sur la performance nette à long terme est explicité au moment de la souscription.</p>
    </div>
    <div class="block">
      <div class="block-title">Préférence en matière de durabilité (ESG)</div>
      <p>Intégration partielle des critères ESG. Les recommandations émises tiennent compte de cette préférence et privilégient, le cas échéant, des supports labellisés ISR ou article 8/9 SFDR.</p>
    </div>
  </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Déclaration d'adéquation</span><span>26 mai 2026 14:30</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Déclaration d'adéquation — Suivi et cadre</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 26 mai 2026 14:30</div></div>
    <div class="section">
    <div class="section-title">Modalités de suivi périodique</div>
    <div class="block">
      <p>Conformément à l'article L.522-5 III du Code des assurances, le cabinet s'engage à :</p>
      <ul style="margin-top:4px;padding-left:14px;">
        <li>réévaluer l'adéquation du conseil au minimum à fréquence <strong>annuelle</strong> (à confirmer) ;</li>
        <li>solliciter du client la mise à jour des informations KYC si une évolution significative de sa situation est portée à notre connaissance ;</li>
        <li>tenir à disposition du client un compte-rendu de chaque revue.</li>
      </ul>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Cadre réglementaire et références légales</div>
    <div class="block">
      <p>Cette déclaration d'adéquation est établie conformément aux obligations DDA applicables à l'activité du cabinet EcoPatrimoine Conseil (intermédiaire en assurance).</p>
      <p style="margin-top:6px;">Références applicables :</p>
      <ul style="margin-top:4px;padding-left:14px;font-size:8.5pt;line-height:1.7;">
        <li><strong>Code des assurances</strong> · L.511-1 et s. — Conditions d'exercice de l'intermédiation en assurance</li><li><strong>Code des assurances</strong> · L.521-1 et s. — Devoir d'information et de conseil — DDA transposée en droit français</li><li><strong>Code des assurances</strong> · L.522-1 et s. — Règles spécifiques aux contrats d'assurance-vie et unités de compte (IBIP)</li><li><strong>Directive UE 2016/97 (DDA)</strong> · — — Distribution d'assurance</li>
      </ul>
    </div>
  </div>
    <div class="portee">
      <strong>Portée du document — Ploutos (Ecopatrimoine).</strong> Ce document est généré pour vous aider à respecter vos obligations de conformité. Il ne constitue ni une attestation, ni une garantie d'exhaustivité réglementaire. Le conseiller reste seul responsable de la cohérence des mentions avec sa situation et le référentiel de son association professionnelle.
    </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Déclaration d'adéquation</span><span>26 mai 2026 14:30</span></div>
  </div></body></html>"
`;

exports[`pdfAdequation — snapshot état dégradé (0 recommandation) > génère la déclaration NON VALIDE avec bandeau + matrice absente + coûts grisés 1`] = `
"<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"/>
<title>Déclaration d'adéquation — Pierre Dupont & Sophie Dupont</title>
<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"/>
<style>
  @page{size:A4;margin:14mm 12mm 12mm 12mm;}
  *{box-sizing:border-box;}
  body{font-family:'Lato',-apple-system,BlinkMacSystemFont,sans-serif;font-size:9.5pt;line-height:1.55;color:#0F172A;margin:0;}
  .page{position:relative;min-height:255mm;padding:6mm 0 14mm 0;page-break-after:always;}
  .page:last-of-type{page-break-after:auto;}
  .cover{display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:255mm;text-align:center;background:linear-gradient(135deg,#FDF6E8 0%,#fff 60%);padding:30mm 12mm;}
  .cover-logo{max-height:42mm;max-width:90mm;object-fit:contain;margin-bottom:14mm;}
  .cover-title{font-size:24pt;font-weight:900;letter-spacing:-0.5px;color:#0F172A;margin-bottom:4mm;}
  .cover-subtitle{font-size:12pt;color:#26428B;font-weight:600;margin-bottom:8mm;}
  .cover-bar{width:60mm;height:2px;background:#C4973D;margin:8mm auto;}
  .cover-tagline{font-size:8.5pt;color:#666;line-height:1.7;margin-top:6mm;max-width:130mm;}
  .cover-footer{position:absolute;bottom:14mm;left:0;right:0;text-align:center;font-size:7.5pt;color:#888;}
  .page-header{display:flex;justify-content:space-between;align-items:center;border-bottom:2px solid #C4973D;padding:0 12mm 4mm 12mm;margin-bottom:6mm;}
  .page-header-title{font-size:13pt;font-weight:700;color:#0F172A;}
  .page-header-client{font-size:8pt;color:#888;}
  .page-footer{position:absolute;bottom:6mm;left:12mm;right:12mm;display:flex;justify-content:space-between;font-size:7pt;color:#999;border-top:1px solid #eee;padding-top:3mm;}
  .section{margin:0 12mm 8mm 12mm;}
  .section-title{font-size:10pt;font-weight:700;color:#0F172A;border-bottom:1px solid #C4973D;padding-bottom:3px;margin-bottom:6px;}
  .block{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:6px;padding:8px 11px;margin-bottom:8px;font-size:8.5pt;line-height:1.55;color:#333;}
  .block-title{font-size:9.5pt;font-weight:700;color:#0F172A;margin-bottom:4px;}
  .kpi-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:8px;margin-bottom:8px;}
  .kpi{background:#fff;border:1px solid rgba(227,175,100,0.25);border-radius:6px;padding:7px 9px;text-align:center;}
  .kpi-label{font-size:7pt;color:#888;text-transform:uppercase;letter-spacing:0.5px;margin-bottom:3px;}
  .kpi-value{font-size:11pt;font-weight:700;color:#0F172A;}
  .kpi-sub{font-size:7pt;color:#666;margin-top:2px;}
  table.matrice{width:100%;border-collapse:collapse;font-size:8pt;}
  table.matrice th{background:#0F172A;color:#fff;text-align:left;padding:6px 8px;font-weight:700;border:1px solid #0F172A;}
  table.matrice td{padding:6px 8px;border:1px solid #ddd;vertical-align:top;background:#fff;page-break-inside:avoid;break-inside:avoid;}
  table.matrice tr:nth-child(even) td{background:rgba(227,175,100,0.05);}
  .dim-header td{background:#C4973D20!important;font-weight:700;color:#0F172A;font-size:8.5pt;}
  .non-valide{background:#FEE2E2;border:2px solid #DC2626;border-radius:6px;padding:10px 12px;margin:0 12mm 10mm 12mm;font-size:9.5pt;color:#991B1B;line-height:1.5;}
  .non-valide-title{font-size:11pt;font-weight:900;margin-bottom:4px;}
  .deg-grise{opacity:0.45;pointer-events:none;}
  .mention-reg{font-size:8pt;color:#666;font-style:italic;line-height:1.5;}
  .portee{margin:6mm 12mm 0 12mm;font-size:7pt;color:#92400E;line-height:1.5;background:rgba(146,64,14,0.05);border-left:3px solid rgba(146,64,14,0.35);padding:6px 10px;border-radius:4px;}
  a{color:#26428B;text-decoration:none;}
  @media print{
    .block,table.matrice tr,.kpi{page-break-inside:avoid;break-inside:avoid;}
  }</style></head><body><div class="page cover">
    
    <div class="cover-title">Déclaration d'adéquation</div>
    <div class="cover-subtitle">DDA</div>
    <div class="cover-bar"></div>
    <div style="font-size:9pt;color:#0F172A;font-weight:600;margin-top:6mm;">Remise à : Pierre Dupont & Sophie Dupont</div>
    <div style="font-size:9pt;color:#666;margin-top:2mm;">le 26 mai 2026 à 14:30</div>
    <div class="cover-tagline">
      Document remis <strong>à titre informatif uniquement</strong>, conformément aux obligations DDA. Justifie en quoi le conseil délivré correspond aux objectifs, à l'horizon, à la tolérance au risque, à la capacité à subir des pertes et aux préférences de durabilité (ESG) du client.
    </div>
    <div style="margin-top:8mm;font-size:8.5pt;color:#26428B;font-weight:600;">Document remis MÊME SANS TRANSACTION effective.</div>
    <div class="cover-footer">EcoPatrimoine Conseil · ORIAS n° 25006907 · Document confidentiel · 26 mai 2026 14:30</div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Déclaration d'adéquation — En-tête et profil</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 26 mai 2026 14:30</div></div>
    <div class="non-valide">
    <div class="non-valide-title">⚠ Déclaration d'adéquation NON VALIDE</div>
    <p>Aucune recommandation justifiée n'a été saisie pour ce dossier. Une déclaration d'adéquation opposable nécessite au moins une recommandation rattachée à une dimension du profil (besoin / risque / ESG / capacité de perte).</p>
    <p style="margin-top:4px;font-size:8.5pt;">Saisir les recommandations dans l'onglet <strong>Lettre de mission</strong> → bloc <strong>Recommandations &amp; plan d'action</strong>, puis régénérer ce document.</p>
  </div>
    <div class="section">
    <div class="section-title">En-tête réglementaire</div>
    <div class="block">
      <p><strong>Date et heure de remise :</strong> le 26 mai 2026 à 14:30.</p>
      <p style="margin-top:4px;"><strong>Remise même sans transaction :</strong> le présent document est remis au client préalablement à toute opération, y compris si aucune transaction n'est conclue à l'issue de la mission.</p>
      <p style="margin-top:4px;"><strong>Suivi périodique :</strong> ce conseil fait l'objet d'un suivi périodique (revue annuelle — à confirmer) au cours duquel l'adéquation est réévaluée à la lumière des évolutions de votre situation.</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Synthèse du profil KYC (issue du questionnaire de mission)</div>
    <div class="kpi-grid">
      <div class="kpi">
        <div class="kpi-label">Tolérance au risque</div>
        <div class="kpi-value">Dynamique</div>
        <div class="kpi-sub">Score : 54 / 96 pts (hors ESG)</div>
      </div>
      <div class="kpi">
        <div class="kpi-label">Horizon</div>
        <div class="kpi-value">Long terme (9 à 15 ans)</div>
        <div class="kpi-sub">+8 pts</div>
      </div>
      <div class="kpi">
        <div class="kpi-label">Capacité à subir des pertes</div>
        <div class="kpi-value">faible</div>
        <div class="kpi-sub">1 mois de coussin liquide</div>
      </div>
      <div class="kpi">
        <div class="kpi-label">Préférence ESG</div>
        <div class="kpi-value">PARTIEL</div>
        <div class="kpi-sub">Sous-score : 2 / 4 pts</div>
      </div>
    </div>
    <div class="block" style="font-size:8pt;">
      <div class="block-title">Détail capacité à subir des pertes</div>
      <ul style="margin:0;padding-left:14px;">
        <li>Coussin liquide ≈ 1 mois de revenus</li>
      </ul>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Rappel des besoins exprimés (KYC)</div>
    <div class="block">
      <ul style="margin:0;padding-left:14px;"><li>Santé — Dépenses non remboursées</li><li>Santé — Hospitalisation</li><li>Prévoyance — Arrêt de travail / invalidité</li><li>Prévoyance — Décès</li><li>Retraite — Capital retraite</li><li>Retraite — Optimiser l'épargne retraite existante</li><li>Épargne — Valoriser un capital</li><li>Épargne — Préparer la transmission</li></ul>
    </div>
  </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Déclaration d'adéquation</span><span>26 mai 2026 14:30</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Déclaration d'adéquation — Matrice et conseil</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 26 mai 2026 14:30</div></div>
    
    <div class="section deg-grise">
    <div class="section-title">Coûts, frais et impact durabilité</div>
    <div class="block">
      <div class="block-title">Mode de rémunération du cabinet</div>
      <p>Commission versée par l'assureur (incluse dans la prime).</p>
      <p style="margin-top:4px;">Barème d'honoraires : <em style="color:#92400E">à confirmer</em>.</p>
    </div>
    <div class="block">
      <div class="block-title">Impact des frais sur la performance</div>
      <p>Les frais (frais d'entrée, frais de gestion, frais d'arbitrage, le cas échéant) sont communiqués au client avant toute souscription, dans les documents précontractuels du contrat retenu (DIC / IPID). Leur impact sur la performance nette à long terme est explicité au moment de la souscription.</p>
    </div>
    <div class="block">
      <div class="block-title">Préférence en matière de durabilité (ESG)</div>
      <p>Intégration partielle des critères ESG. Les recommandations émises tiennent compte de cette préférence et privilégient, le cas échéant, des supports labellisés ISR ou article 8/9 SFDR.</p>
    </div>
  </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Déclaration d'adéquation</span><span>26 mai 2026 14:30</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Déclaration d'adéquation — Suivi et cadre</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 26 mai 2026 14:30</div></div>
    <div class="section">
    <div class="section-title">Modalités de suivi périodique</div>
    <div class="block">
      <p>Conformément à l'article L.522-5 III du Code des assurances, le cabinet s'engage à :</p>
      <ul style="margin-top:4px;padding-left:14px;">
        <li>réévaluer l'adéquation du conseil au minimum à fréquence <strong>annuelle</strong> (à confirmer) ;</li>
        <li>solliciter du client la mise à jour des informations KYC si une évolution significative de sa situation est portée à notre connaissance ;</li>
        <li>tenir à disposition du client un compte-rendu de chaque revue.</li>
      </ul>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Cadre réglementaire et références légales</div>
    <div class="block">
      <p>Cette déclaration d'adéquation est établie conformément aux obligations DDA applicables à l'activité du cabinet EcoPatrimoine Conseil (intermédiaire en assurance).</p>
      <p style="margin-top:6px;">Références applicables :</p>
      <ul style="margin-top:4px;padding-left:14px;font-size:8.5pt;line-height:1.7;">
        <li><strong>Code des assurances</strong> · L.511-1 et s. — Conditions d'exercice de l'intermédiation en assurance</li><li><strong>Code des assurances</strong> · L.521-1 et s. — Devoir d'information et de conseil — DDA transposée en droit français</li><li><strong>Code des assurances</strong> · L.522-1 et s. — Règles spécifiques aux contrats d'assurance-vie et unités de compte (IBIP)</li><li><strong>Directive UE 2016/97 (DDA)</strong> · — — Distribution d'assurance</li>
      </ul>
    </div>
  </div>
    <div class="portee">
      <strong>Portée du document — Ploutos (Ecopatrimoine).</strong> Ce document est généré pour vous aider à respecter vos obligations de conformité. Il ne constitue ni une attestation, ni une garantie d'exhaustivité réglementaire. Le conseiller reste seul responsable de la cohérence des mentions avec sa situation et le référentiel de son association professionnelle.
    </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Déclaration d'adéquation</span><span>26 mai 2026 14:30</span></div>
  </div></body></html>"
`;
